--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
-backend/node_modules
-backend/node_modules/*
+# Node modules
+backend/node_modules/
+react_js/node_modules/
+frontend/node_modules/
+
+# Build outputs
+react_js/dist/
+frontend/dist/
+
+# Environment variables
 *.env
+*.env.local
+*.env.development
+*.env.production
+
+# Logs and caches
+*.log
+*.cache
+*.tmp
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Editor-specific files
+.vscode/
+.idea/
+
+# Miscellaneous
+coverage/
+*.bak
+*.swp
